--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,6 @@
-Add the actual colours to the Voronoi map.
-2. Create another table candidates_22 associating candidate IDs with party IDs.
-3. Associate party IDs with colours in the C application---this way we can think about doing things like using stripes of two colours to represent some parties.
-4. Update your booths query so that it returns the party ID of the candidate with the most first preferences for each booth.
+Add some vote data.
+
+Update your booths query so that it returns the party ID of the candidate with the most first preferences for each booth.
 
 Add cities/suburbs to labels depending on zoom level
 
