--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,11 @@
-Cleanup pointers (touch events on front end).
-- Only add to various pointer arrays when relevant pointers exist.
-- Generally clean up window event listeners.
+Remove alpha from colours (for real this time).
+
+Make it possible to drag up the panel on mobile.
+
+Get the FP party codes from the database.
+Make the party codes look nicer and selectable.
+
+Actually choose 2CP/FP depending on the map state.
 
 ---
 
