remove alpha from vertices
interpolate through rgb badly so we can still see a variation in the colours.

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-Remove alpha from colours (for real this time).
+Interpolate the colours in HSL.
 
 Make it possible to drag up the panel on mobile.
 
