--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
 Get the FP party codes from the database.
 Make the party codes look nicer and selectable.
 
+Change Postgres columns dict from s64 to int.
+
 Actually choose 2CP/FP depending on the map state.
 
 ---
