--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,8 @@ Make the party codes look nicer and selectable.
 
 Actually choose 2CP/FP depending on the map state.
 
+Fix the issue where there's a column of white pixels on the right sometimes depending on the screen size.
+
 ---
 
 On mobile, shrink the map when the panel is dragged up.
