--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
+Implement testing of scale+rotate rotations.
+- Add shift key modifier to input.
+- Save transforms by hitting shift and a number.
+
 Fix the issue where there's a column of white pixels on the right sometimes depending on the screen size.
 
 On mobile, shrink the map when the panel is dragged up.
@@ -90,6 +94,8 @@ Front end: draw compass.
     On desktop, when you press the compass you go into rotation mode. A circle appears in the middle of the screen with the compass directions etched in. Your cursor is on the edge of the compass. A change in the cursor image would be nice. While the mouse is held down, the circle rotates such that the point the cursor was originally on is the closest point on the circle to the cursor position.
 
 ---
+
+|Bug: http://tmp.tal:6008/bin/vertices?&x0=1245681.9351063075&y0=3384238.725323079&x1=1809330.036574922&y1=4044415.7830911092&upp=675.0276664294785 fails is_polygon() assert.
 
 In polling booth mode, when you hover/tap on the relevant places on the 2CP and FP charts, update the polling-booth circles appropriately.
 In the default mode, when you hover/tap on the relevant places on the overall election results chart, visualise the FP results for just that party on the map.
