--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,21 @@
-Delete old tables and enums from the database.
-Also vacuum.
+Colour the electorates by the party of the winning candidate.
 
-As the default view when the page loads, show electorates overall instead of the Voronoi.
-    Make one such choropleth for each federal election.
-    Make it possible to switch between them with < and > icons next to the election title.
+Make it possible to switch between elections with < and > icons next to the election title.
 
-Add an overall election result graph to the main panel that shows the number of seats won by each party.
+Database stuff:
+    Currently we're creating a electorates_topo_2 topology with a tolerance of 3. Wait for that to finish.
+    Look at topologysummary('electorates_topo_2') and see how much we improved it.
+    Create a new topogeometry column in electorates called bounds_topo_2.
+    Make sure the new and old topogeometry columns are similar in area.
+    Draw all the edges of the new topology in random colours and observe that the edges only change colours at nodes.
+    See whether it is now feasible to draw the polygons with st_simplify() on the topology instead of st_snaptogrid() on the geometry.
+    If it all looks good:
+        Update electorates.bounds with the topogeometries.
+        Update our documentation to add the tolerance parameter to CreateTopology.
+        Delete the old electorates.bounds_topo topogeometry and electorates_topo topology and rename their replacements to remove the _2 suffixes.
+        Do a full vacuum on electorates.
+    Also rename the table names to remove plurals.
+        Remove _votes suffixes from contest_vote columns and rename booth_vote.votes to booth_vote.total.
 
 On the front end, come up with a convincing distinction between "tap" and "drag", so map labels can be tapped.
 
@@ -27,6 +37,8 @@ When you tap on an electorate label:
     Panel updates:
         Show the electorate name as the main title, squashing the election title into one line above that.
         Add an X next to the electorate name (or something) to allow going back to the previous mode.
+
+Add an overall election result graph to the main panel that shows the number of seats won by each party.
 
 In polling booth mode, show a 2CP chart just below the election name.
 
