--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
+Use election ID rather than year as query parameter.
+
+Remove all the nonsense about multiple flipping of the Y axis.
+
 Improve labels.
     Merge serve_vertices() and serve_labels() on the backend so they make the same set of database queries.
     Make labels only exist in the data if the shapes they correspond to appear on the page.
@@ -7,7 +11,6 @@ Improve labels.
 When you tap on an electorate label:
     Map updates:
         Change to a flat-colour view of the map.
-        Zoom to that electorate.
         Highlight the electorate bounds.
         Make the chosen electorate label bigger.
         Make the polling booths appear as circles.
