add support for different tile themes

--- a/todo.txt
+++ b/todo.txt
@@ -16,6 +16,7 @@ To complete V2:
     Add some roads and rivers.
     Add the polling booths.
     Move to votemap-prod container with NGINX load-balancing.
+    Don't show the labels until the map is showing the correct election's vertices.
 
 ---
 
